# agentic-warden

./: .cargoignore  .gitattributes  .gitignore  .mcp.json.example  .npmignore-placeholder  ADVANCED_PIPELINE_CAPABILITY_ASSESSMENT.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CROSS_PLATFORM_MUSL_GUIDE.md  Cargo.toml  DOCKER_BUILD_GUIDE.md  Dockerfile.build  Dockerfile.ci  FUNCTIONAL_DOMAINS.md  GOOGLE_APIS_MIGRATION.md  INTELLIGENT_ROUTING_TEST_SUMMARY.md  LICENSE  MCP_QUALITY_UPGRADE_PLAN.md  MUSL_COMPATIBILITY_ANALYSIS.md  NPM_RELEASE_GUIDE.md  OAUTH_SETUP.md  PROJECT_IMPLEMENTATION_PLAN.md  README-NPM.md  README-placeholder.md  README.md  README.zh.md  README_INTEGRATION_TESTS.md  README_zh.md  REGISTRY_FACTORY.md  RING_REPLACEMENT_ANALYSIS.md  SPEC.md  SPEC_ALIGNMENT_REVIEW_2025-11-10.md  SPEC_ALIGNMENT_REVIEW_CORRECTED.md  SPEC_CODE_ALIGNMENT_REPORT.md  SPEC_IMPLEMENTATION_GAP_ANALYSIS.md  SPEC_REUSABLE_MODULES.md  SYNC_RESTORATION_REPORT.md  TESTING.md  (+83 more)
.cargo/: config.toml
.githooks/: README.md  commit-msg  pre-commit
.github/workflows/: ci.yml  integration-tests.yml  release.yml  test.yml
.gsc/: feedback.jsonl  project.id
SPEC/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-DATA-STRUCTURE.md  04-API-DESIGN.md  05-CHANGELOG.md  06-TESTING-STRATEGY.md  API.md  ARCHITECTURE.md  CC-PROMPT-AUDIT.md  CC-PROMPTS-COLLECTION.md  CONFIGURATION.md  DATA_MODEL.md  DEPLOYMENT.md  MCP-INTEGRATION.md  MODULES.md  OVERVIEW.md  RECOVERY_NOTES.md  TESTING.md  TRACEABILITY.md  verify_207.py
SPEC/DOCS/: AI-DEVELOPER-GUIDE.md  MCP-REGISTRY-CLI-GUIDE.md
aiw-plugins-market/: CONTRIBUTING.md  LICENSE  README.md
aiw-plugins-market/.claude-plugin/: marketplace.json
config/: provider.json.template
docs/: MCP_CLI_COMMANDS_DESIGN.md  MCP_CLI_SIMPLE_DESIGN.md  MCP_PACKAGE_REGISTRY_STRATEGY.md  ORT_BUNDLING.md  PROVIDER_DESIGN.md  integration-testing-guide.md  intelligent_routing_e2e_test_plan.md
docs/domain-knowledge/: grok-build.md
examples/: js_orchestrated_workflow.md  test_claude_patch.rs
mcp_test_env/: pyvenv.cfg
npm-package/: README.md  index.js  package.json
rmcp-simulator/: Cargo.toml
rmcp-simulator/src/: main.rs
schema/: providers.json
scripts/: MANUAL_PUBLISH.md  README.md  e2e_functional_tests.py  e2e_functional_tests.sh  emergency_cleanup.sh  generate_test_output.py  intelligent_routing_e2e_tests.py  package.sh  postinstall.js  publish-npm.sh  quick_e2e_check.sh  quick_routing_validation.sh  release-simple.sh  release.sh  run_all_tests.ps1  setup-ort.sh  setup_integration_tests.sh  sync_version.sh  test_config.yaml  test_routing_branches.sh  test_runner.sh  update-version.sh  validate_tests.py
scripts/tests/: test_generate_test_output.py
src/: cli_manager.rs  cli_manager.rs.bak  cli_oauth.rs  cli_type.rs  config.rs  error.rs  help.rs  lib.rs  logging.rs  main.rs  mcp.rs  process_registry.rs  process_tree.rs  pwait_mode.rs  registry.rs  registry_factory.rs  shared_map.rs  signal.rs  smart_oauth.rs  storage.rs  supervisor.rs  task_prepare.rs  task_record.rs  task_tracker.rs  unified_registry.rs  utils.rs  wait_mode.rs  worktree.rs
src/auto_mode/: config.rs  executor.rs  judge.rs  mod.rs
src/commands/: ai_cli.rs  auto.rs  cli_args.rs  mod.rs  parser.rs  patch.rs  tui_commands.rs
src/common/: constants.rs  data_structures.rs  messages.rs  mod.rs  screen_base.rs  utils.rs
src/core/: mod.rs  models.rs  process_tree.rs  safe_shared.rs  shared_map.rs
src/hooks/: config.rs  handler.rs  input.rs  mod.rs  parser.rs
src/mcp/: capability_detector.rs  dynamic_tools.rs  js_executor.rs  mod.rs  table_format.rs
src/mcp_routing/: ai_cli_codegen.rs  capability_generator.rs  codegen.rs  config.rs  config_watcher.rs  decision.rs  embedding.rs  index.rs  mod.rs  models.rs  pool.rs  registry.rs
src/memory/: config.rs  embedding.rs  history.rs  memory_manager.rs  mod.rs  semantic_search.rs  todo_manager.rs  vector_store.rs
src/patcher/: error.rs  file.rs  mod.rs  registry.rs  runtime.rs  types.rs  versions.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/provider/: commands.rs.bak  config.rs  env_injector.rs  env_mapping.rs  error.rs  manager.rs  mod.rs  network_detector.rs  recommendation_engine.rs  token_validator.rs
src/roles/: builtin.rs  mod.rs
src/sync/: auth_flow.rs  compressor.rs  config_packer.rs  config_sync_manager.rs  device_flow_client.rs  direct_token_flow.md  directory_hasher.rs  error.rs  google_drive_client.rs  google_drive_service.rs  mod.rs  oauth_client.rs  oauth_client.rs.bak  oauth_error.html  oauth_info.html  oauth_success.html  refactored_sync_manager.rs  smart_device_flow.rs  smart_oauth.rs  sync_command.rs  sync_config.rs  sync_config_manager.rs  sync_service_example.rs
src/tui/: app.rs  app_state.rs  data_binding.rs  event.rs  mod.rs
target_check/: .rustc_info.json
test-results/: e2e_report_20251122_211200.md  routing_e2e_report_20251122_211807.md  routing_e2e_report_20251122_212008.md  routing_e2e_report_20251122_212018.md  test_report.md
tests/: README.md  REAL_INTEGRATION_TESTS.md  ai_cli_integration.rs  ai_cli_real_failure.rs  ai_cli_update_e2e_tests.rs  app_state_flow.rs  basic_integration.rs  boundary_cases_test.rs  capability_detection.rs  cli_parser.rs  collision_resistant_log_names.rs  complete_sync_workflow_test.rs  concurrency_safety_test.rs  conversation_history_e2e_tests.rs  cross_platform_root_process_test.rs  dynamic_registry_unit_test.rs  dynamic_tool_registry.rs  e2e_cli_workflow.rs  gllm_compatibility.rs  gllm_direct_integration.rs  gllm_embedding_complete_coverage.rs  gllm_embedding_demo.rs  gllm_rerank_accuracy.rs  gllm_rerank_basic.rs  gllm_rerank_embedding_integration.rs  gllm_rerank_performance.rs  google_drive_oauth_test.rs  grok_patch.rs  intelligent_route_dual_mode_tests.rs  js_orchestrator_tests.rs  macos_process_tree_test.rs  market_cli.rs  marketplace.rs  mcp_browse_018_skip_optional.rs  mcp_browse_019_installed_mcps.rs  mcp_browse_020_edit_env_vars.rs  mcp_browse_complete_workflow.rs  mcp_browse_test_support.rs  mcp_core_methods.rs  mcp_js_tool_e2e_tests.rs  (+42 more)
(+200 files in other folders)
