[package]
name = "agentic-warden"
description = "Universal AI agent manager with shared-memory task tracking, process management, and multi-agent orchestration."
license = "MIT"
repository = "https://github.com/putao520/agentic-warden"
readme = "README.md"
keywords = ["ai", "agents", "cli", "supervisor", "automation", "shared-memory", "claude", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools", "ai-tools"]
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_hashmap = "0.1.2"
shared_memory = "0.12"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
raw_sync = "0.1.5"

# Google OAuth and Drive support
reqwest = { version = "0.11", features = ["json", "multipart"] }
url = "2.4"
base64 = "0.21"
sha2 = "0.10"
md5 = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
urlencoding = "2.1"

# Google Official APIs
yup-oauth2 = "8.3"
mime_guess = "2.0"

# Additional dependencies for official Google APIs
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
futures = "0.3"

# CLI UI and graphics
ratatui = "0.24"
crossterm = "0.27"
plotters = "0.3"
plotters-bitmap = "0.3"
color-eyre = "0.6"

# Configuration and directories
dirs = "5.0"
toml = "0.8"
which = "6.0"

# Interactive UI
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# File system operations
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"

# Browser integration
open = "5.0"

# HTTP server for OAuth callbacks
axum = "0.7"
axum-server = "0.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Temporary files
tempfile = "3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
psutil = "3.2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_ToolHelp"
] }

[dev-dependencies]
tempfile = "3.0"
walkdir = "2.4"
# Additional dependencies for integration testing
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
# For safety and cleanup mechanisms
uuid = { version = "1", features = ["v4"] }

[features]
default = []
testing = []

# Core Tests (essential functionality)

[[test]]
name = "test_safety"
path = "tests/test_safety.rs"
required-features = ["testing"]

# Unit Tests
[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"
required-features = ["testing"]

# Integration Tests
[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
required-features = ["testing"]

# End-to-End Tests
[[test]]
name = "e2e_tests"
path = "tests/e2e/mod.rs"
required-features = ["testing"]
