[package]
name = "rmcp-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["client", "transport-io"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"